--- a/openshift/zac.svc.yaml
+++ b/openshift/zac.svc.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: zac
+  annotations:
+    prometheus.io/scrape: "true"
 spec:
   ports:
   - name: web
